Fix: W3c html errors

--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 </main>
 <footer class="footer footer__general">
     <div class="footer__content">
-        <span class="footer__title">
+        <div class="footer__title">
             <h3 class="title__footer">ohmyfood</h3>
-        </span>
+        </div>
         <ul class="footer__container">
             <li class="fork__icon">
                 <i class="fa-solid fa-utensils"></i>
@@ -289,5 +289,6 @@
                 <a href="mailto:contact@ohmyfood.com" class="footer__links">Contact</a>
             </li>
         </ul>
+    </div>
     </footer>
 </body>
