--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
             </article>
             <article class="restaurant__cards">
-                <a href="" class="card__link">
+                <a href="./delice.html" class="card__link">
                     <div class="card__img">
                         <img class="card__photo" src="./assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="image d'une assiette de langouste rôtie" >
