Revert "fix: change path link steelsheets in html files"
This reverts commit 618ec20b770c4240bb61c15ed77b10702fa626bf.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
                 </article>
                 <article class="restaurant__cards">
-                    <a href="./note_enchantee.html" class="card__link">
+                    <a href="./Palette_menu.html" class="card__link">
                         <div class="card__img">
                             <img class="card__photo"
                                 src="./assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
