--- a/delice.html
+++ b/delice.html
@@ -60,10 +60,10 @@
             </div>
     </header>
     <main class="page__menu">
-        <section class="section  section__delice">
-            <div class="delice__menu">
-                <div class="delice__title">
-                    <h3 class="title__delice">Le délice des sens</h3>
+        <section class="section  section__palette">
+            <div class="palette__menu">
+                <div class="palette__title">
+                    <h3 class="title__palette">Le délice des sens</h3>
                 </div>
                 <div class="heart__anim"> 
                         <input type="checkbox" name="heart1" id="heart-liked">
