add:delice and note_enchantee.html & change path link steelsheets in html files

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -19,13 +19,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/css/delice.min.css">
+    <link rel="stylesheet" href="./assets/css/note_enchantee.min.css">
     <!-- <link rel="stylesheet" href="./assets/css/home.min.css"> -->
 
    
 </head>
 
-<!--              Page   Délice des sens html            -->
+<!--              Page   La note enchantée html            -->
 
 <body>
     <div class="loader__cooking">
@@ -60,10 +60,10 @@
             </div>
     </header>
     <main class="page__menu">
-        <section class="section  section__delice">
-            <div class="delice__menu">
-                <div class="delice__title">
-                    <h3 class="title__delice">Le délice des sens</h3>
+        <section class="section  section__note">
+            <div class="note__menu">
+                <div class="note__title">
+                    <h3 class="title__note">Le note enchantée</h3>
                 </div>
                 <div class="heart__anim"> 
                         <input type="checkbox" name="heart1" id="heart-liked">
@@ -93,8 +93,8 @@
                     <input type="checkbox" name="menu__entrees" id="entree1">
                     <label for="entree1" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Tartare de thon</span><br>
-                            <span class="cards__subtitle">Assaisonné au yuzu</span>
+                            <span class="cards__title">Ravioles de foie gras</span><br>
+                            <span class="cards__subtitle">Accompagnées de leur crème à la truffe</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">25&#8364;</span>
@@ -104,8 +104,8 @@
                     <input type="checkbox" name="menu__entrees" id="entree2">
                     <label for="entree2" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Bouchée de homard croustillant</span><br>
-                            <span class="cards__subtitle">Et sa farandole de petits légumes</span>
+                            <span class="cards__title">Caviar osciètre</span><br>
+                            <span class="cards__subtitle">Sur blini à la farine de blé noir</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">35&#8364;</span>
@@ -115,11 +115,23 @@
                     <input type="checkbox" name="menu__entrees" id="entree3">
                     <label for="entree3" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Velouté de cèpes</span><br>
-                            <span class="cards__subtitle">Aux truffes</span>
+                            <span class="cards__title">Homard et espuma de potiron</span><br>
+                            <span class="cards__subtitle">Marinés aux zestes d'orange</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">20&#8364;</span>
+                            <span class="price__valided"><i class="fa-solid fa-circle-check fa-xl"></i></span>
+                        </span>
+                    </label>
+                    </label>
+                    <input type="checkbox" name="menu__entrees" id="entree4">
+                    <label for="entree4" class="cards cards__entrees">
+                        <span class="card__content">
+                            <span class="cards__title">Foie gras de canard cuit entier</span><br>
+                            <span class="cards__subtitle">Confiture de figue et pain toasté</span>
+                        </span>
+                        <span class="price__content">
+                            <span class="price__value">35&#8364;</span>
                             <span class="price__valided"><i class="fa-solid fa-circle-check fa-xl"></i></span>
                         </span>
                     </label>
@@ -132,8 +144,8 @@
                     <input type="checkbox" name="menu__plats" id="plat1">
                     <label for="plat1" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Poulet rôti aux herbes de Provence</span><br>
-                            <span class="cards__subtitle">Et sa crème de truffe</span>
+                            <span class="cards__title">Noix de coquilles Saint-Jacques</span><br>
+                            <span class="cards__subtitle">Sur lit de purée de céleri-rave</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">40&#8364;</span>
@@ -143,8 +155,8 @@
                     <input type="checkbox" name="menu__plats" id="plat2">
                     <label for="plat2" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Langouste rôtie</span><br>
-                            <span class="cards__subtitle">Et ses légumes de saison</span>
+                            <span class="cards__title">Langoustine poêlée</span><br>
+                            <span class="cards__subtitle">Purée de patate douce</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">35&#8364;</span>
@@ -154,8 +166,8 @@
                     <input type="checkbox" name="menu__plats" id="plat3">
                     <label for="plat3" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Côte de bœuf Angus</span><br>
-                            <span class="cards__subtitle">Et sa purée de panais</span>
+                            <span class="cards__title">Mijoté de queue de bœuf</span><br>
+                            <span class="cards__subtitle">Et riz sauvage aux zestes de citron</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">44&#8364;</span>
@@ -171,8 +183,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert1">
                     <label for="dessert1" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Farandole de desserts</span><br>
-                            <span class="cards__subtitle">Du chef</span>
+                            <span class="cards__title">Macaron noisette et chocolat</span><br>
+                            <span class="cards__subtitle">Glace au caramel brun et sel de Guérande</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">18&#8364;</span>
@@ -182,8 +194,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert2">
                     <label for="dessert2" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Crème brulée</span><br>
-                            <span class="cards__subtitle">Revisitée</span>
+                            <span class="cards__title">Baba au rhum revisité</span><br>
+                            <span class="cards__subtitle">Avec son coulis de citron</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">22&#8364;</span>
@@ -193,8 +205,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert3">
                     <label for="dessert3" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Tiramisu</span><br>
-                            <span class="cards__subtitle">À la noisette</span>
+                            <span class="cards__title">Tarte au citron meringuée</span><br>
+                            <span class="cards__subtitle">Déstructurée</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">23&#8364;</span>
