add:a_la_francaise.html and scss,css

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -19,13 +19,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/css/note_enchantee.min.css">
+    <link rel="stylesheet" href="./assets/css/a_la_francaise.min.css">
     <!-- <link rel="stylesheet" href="./assets/css/home.min.css"> -->
 
    
 </head>
 
-<!--              Page   La note enchantée html            -->
+<!--              Page   Délice des sens html            -->
 
 <body>
     <div class="loader__cooking">
@@ -55,15 +55,15 @@
         </div>
             <div class="header__img">
                 <img class="header__photo" 
-                src="./assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
+                src="./assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
                 alt="image d'une assiette de poulet rôti aux herbes de Provence" >
             </div>
     </header>
     <main class="page__menu">
-        <section class="section  section__note">
-            <div class="note__menu">
-                <div class="note__title">
-                    <h3 class="title__note">Le note enchantée</h3>
+        <section class="section  section__francaise">
+            <div class="francaise__menu">
+                <div class="francaise__title">
+                    <h3 class="title__francaise">&Agrave; la Française </h3>
                 </div>
                 <div class="heart__anim"> 
                         <input type="checkbox" name="heart1" id="heart-liked">
@@ -93,8 +93,8 @@
                     <input type="checkbox" name="menu__entrees" id="entree1">
                     <label for="entree1" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Ravioles de foie gras</span><br>
-                            <span class="cards__subtitle">Accompagnées de leur crème à la truffe</span>
+                            <span class="cards__title">Tartare de poulpe acidulé</span><br>
+                            <span class="cards__subtitle">Aux zestes d'orange</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">25&#8364;</span>
@@ -104,8 +104,8 @@
                     <input type="checkbox" name="menu__entrees" id="entree2">
                     <label for="entree2" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Caviar osciètre</span><br>
-                            <span class="cards__subtitle">Sur blini à la farine de blé noir</span>
+                            <span class="cards__title">Velouté de légumes d'antan</span><br>
+                            <span class="cards__subtitle">Carotte, panais, topinambour</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">35&#8364;</span>
@@ -115,23 +115,11 @@
                     <input type="checkbox" name="menu__entrees" id="entree3">
                     <label for="entree3" class="cards cards__entrees">
                         <span class="card__content">
-                            <span class="cards__title">Homard et espuma de potiron</span><br>
-                            <span class="cards__subtitle">Marinés aux zestes d'orange</span>
+                            <span class="cards__title">Soupe à l'oignon</span><br>
+                            <span class="cards__subtitle">Revisitée</span>
                         </span>
                         <span class="price__content">
                             <span class="price__value">20&#8364;</span>
-                            <span class="price__valided"><i class="fa-solid fa-circle-check fa-xl"></i></span>
-                        </span>
-                    </label>
-                    </label>
-                    <input type="checkbox" name="menu__entrees" id="entree4">
-                    <label for="entree4" class="cards cards__entrees">
-                        <span class="card__content">
-                            <span class="cards__title">Foie gras de canard cuit entier</span><br>
-                            <span class="cards__subtitle">Confiture de figue et pain toasté</span>
-                        </span>
-                        <span class="price__content">
-                            <span class="price__value">35&#8364;</span>
                             <span class="price__valided"><i class="fa-solid fa-circle-check fa-xl"></i></span>
                         </span>
                     </label>
@@ -144,8 +132,8 @@
                     <input type="checkbox" name="menu__plats" id="plat1">
                     <label for="plat1" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Noix de coquilles Saint-Jacques</span><br>
-                            <span class="cards__subtitle">Sur lit de purée de céleri-rave</span>
+                            <span class="cards__title">Coquilles Saint-Jacques</span><br>
+                            <span class="cards__subtitle">Accompagnées d'une purée de panais</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">40&#8364;</span>
@@ -155,8 +143,8 @@
                     <input type="checkbox" name="menu__plats" id="plat2">
                     <label for="plat2" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Langoustine poêlée</span><br>
-                            <span class="cards__subtitle">Purée de patate douce</span>
+                            <span class="cards__title">Magret de canard</span><br>
+                            <span class="cards__subtitle">Et parmentier de pommes de terre</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">35&#8364;</span>
@@ -166,8 +154,8 @@
                     <input type="checkbox" name="menu__plats" id="plat3">
                     <label for="plat3" class="cards cards__plats">
                         <span class="card__content">
-                            <span class="cards__title">Mijoté de queue de bœuf</span><br>
-                            <span class="cards__subtitle">Et riz sauvage aux zestes de citron</span>
+                            <span class="cards__title">Pigeonneau d’Ille-et-Vilaine</span><br>
+                            <span class="cards__subtitle">Sur son lit de gnocchis aux légumes</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">44&#8364;</span>
@@ -183,8 +171,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert1">
                     <label for="dessert1" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Macaron noisette et chocolat</span><br>
-                            <span class="cards__subtitle">Glace au caramel brun et sel de Guérande</span>
+                            <span class="cards__title">Pétales de violettes glacés</span><br>
+                            <span class="cards__subtitle">Et purée de noisettes</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">18&#8364;</span>
@@ -194,8 +182,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert2">
                     <label for="dessert2" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Baba au rhum revisité</span><br>
-                            <span class="cards__subtitle">Avec son coulis de citron</span>
+                            <span class="cards__title">Fondant au chocolat</span><br>
+                            <span class="cards__subtitle">Revisité</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">22&#8364;</span>
@@ -205,8 +193,8 @@
                     <input type="checkbox" name="menu__desserts" id="dessert3">
                     <label for="dessert3" class="cards cards__desserts">
                         <span class="card__content">
-                            <span class="cards__title">Tarte au citron meringuée</span><br>
-                            <span class="cards__subtitle">Déstructurée</span>
+                            <span class="cards__title">Millefeuille croustillant</span><br>
+                            <span class="cards__subtitle">Myrtilles et pâte d’amande</span>
                         </span>
                             <span class="price__content">
                                 <span class="price__value">23&#8364;</span>
