--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                 </article>
                 
             <article class="restaurant__cards">
-                <a href="" class="card__link">
+                <a href="./a_la_francaise.html" class="card__link">
                     <div class="card__img">
-                        <img class="card__photo" src="./assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                        <img class="card__photo" src="./assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="image d'une assiette de magret de canard" >
                     </div>
                     <div class="card__content">
@@ -230,7 +230,7 @@
             <article class="restaurant__cards">
                 <a href="./delice.html" class="card__link">
                     <div class="card__img">
-                        <img class="card__photo" src="./assets/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        <img class="card__photo" src="./assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt="image d'une assiette de langouste rôtie" >
                     </div>
                     <div class="card__content">
