fix: update title restaurant cards delice des sens

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </div>
                     <div class="card__content">
                         <div class="card__txt">
-                            <h3 class="card__title">Le délice des sens</h3>
+                            <h3 class="card__title">Les délices des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
                     </div>
