fix: animation home page

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -25,7 +25,7 @@
    
 </head>
 
-<!--              Page   La note enchantée html            -->
+<!--              Page   note du gout html            -->
 
 <body>
     <div class="loader__cooking">
@@ -55,8 +55,8 @@
         </div>
             <div class="header__img">
                 <img class="header__photo" 
-                src="./assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" 
-                alt="image d'une assiette de poulet rôti aux herbes de Provence" >
+                src="./assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
+                alt="image d'une assiette de fricassée d'escargot sur une table" >
             </div>
     </header>
     <main class="page__menu">
