--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header class="header__container">
         <div class="header__logo">
             <div class="logo__content">
-                <img class="logo__img" src="/assets/Images/logo/ohmyfood.png" alt="logo du site ohmyfood">
+                <img class="logo__img" src="./assets/Images/logo/ohmyfood.png" alt="logo du site ohmyfood">
             </div>
         </div>
         <div class="header__location">
