--- a/delice.html
+++ b/delice.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="logo__img">
                     <img class="img__logo" 
-                    src="../assets/Images/logo/ohmyfood.png" 
+                    src="./assets/Images/logo/ohmyfood.png" 
                     alt="logo du site ohmyfood" >
                 </div>
             </div>
